--- a/Index.html
+++ b/Index.html
@@ -1,45 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Profile</title>
+    <!-- Meta information for character encoding and responsiveness -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AgricTooling</title>
+    
+    <!-- Linking external CSS files for reset styling and main design -->
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <!---headr section-->
-  <header>
-    <h1>My Profile</h1>
-  </header>
-  
-<!--navigation section-->
-  <nav>
-    <ul>
-      <li>About Me</li>
-      <li>Hobbies</li>
-      <li>Contact</li>
-    </ul>
-  </nav>
-  
-  <!--Bio Section-->
-  <section>
-    <h2>My Personal Bio</h2>
-    I'm a curious individual who's passionate about learning new things. I've been fortunate enough to be selected for the 3MTT program, which has taught me the importance of advancing my knowledge in ICT. I'm excited to continue learning and growing, and I'm looking forward to help others with the knowledge I am acquiring. I'm grateful for the support of my family, friends and the federal government of Nigeria for the opportunity granted me.
-  </section>
-  
-  <!--List of Hobbies or interest-->
-  <h2>My Hobbies and Interest</h2>
-  <ul>
-    <li>Research</li>
-    <li>Teaching</li>
-    <li>Travelling</li>
-  </ul>
- 
-  <!--Footer section-->
-  <footer>
-    <h2>Contact Me</h2>
-    <ul>
-      <li><a href="mailto:godwinoegbe@gmail.com">Email</a></li>
-      <li><a href="www.linkedin.com/in/godwin-oche-79994333a/">LinkedIn</a></li>
-    </ul>
-  </footer>
 
+<!--
+    Objective:
+    This project aims to create an agricultural tools e-commerce webpage using HTML and CSS.
+    It is structured with semantic HTML elements and designed to be visually appealing and responsive.
+    
+    Use Case:
+    This webpage serves as an online store for agricultural tools, allowing users to browse, learn about,
+    and potentially purchase farming equipment.
+-->
+
+<div class="container">
+    <!-- Hero Section: Displays a promotional banner for the store -->
+    <section class="hero-product">
+        <h1>Buy the Best Agricultural Tools Here</h1>
+        <p>Durable and Reliable is what our Products Speak</p>
+        <button>Learn More </button>
+    </section>
+
+    <!-- Features Section: Lists the available products with images and descriptions -->
+    <section class="features-container">
+        <h2>Our Products</h2>
+        <div class="features">
+            <!-- Product 1: Electric Hand Mower -->
+            <div class="feature-box">
+                <div class="feature-image">
+                    <img src="Electric_Mower.webp" alt="Electric Hand Mower">
+                </div>
+                <p class="feature-title">Electric Hand Mower</p>
+                <p class="feature-description">Trims grass with rotating blades, electric motor driven.</p>
+            </div>
+
+            <!-- Product 2: Disc Plough -->
+            <div class="feature-box">
+                <div class="feature-image">
+                    <img src="Plough_Disc.jpg" alt="Disc Plough">
+                </div>
+                <p class="feature-title">Disc Plough</p>
+                <p class="feature-description">Rotating discs cut and turn over soil.</p>
+            </div>
+
+            <!-- Product 3: Electric Wheelbarrow -->
+            <div class="feature-box">
+                <div class="feature-image">
+                    <img src="Electric_Wheelbarrow.avif" alt="Electric Wheelbarrow">
+                </div>
+                <p class="feature-title">Electric Wheelbarrow</p>
+                <p class="feature-description">Motorized wheel, carries heavy loads, eases manual transport.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer Section: Displays contact information and company rights -->
+    <footer>
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:shammahbagat@gmail.com">shammahbagat@gmail.com</a></p>
+        <p>Phone Number: <a href="tel:+2348164809715">+2348164809715</a></p>
+        <p>Social Media: <a href="https://facebook.com/shammahayub" target="_blank">facebook.com/shammahayub</a></p>
+        <p>&copy; All rights reserved</p>
+    </footer>
+</div>
 </body>
 </html>
+
