--- a/index.html
+++ b/index.html
@@ -1,77 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Meta information about the webpage -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <!-- 
-    Objective:
-    This project is aimed at creating a personal profile webpage using only HTML and CSS.
-    It is structured using semantic HTML elements for better organization and readability.
-
-    Use Case:
-    This webpage can serve as an online portfolio or a personal website 
-    to showcase my bio, hobbies, and contact details.
-    -->
-
-    <!-- Header Section: Contains the website title and navigation menu -->
-    <header>
-        <div class="container">
-            <h1>Shammah Shemang Ayuba</h1>
-            <nav>
-                <ul>
-                    <!-- Navigation links to different sections of the page -->
-                    <li><a href="#about">About Me</a></li>
-                    <li><a href="#hobbies">Hobbies</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <!-- Bio Section: Contains personal information and profile image -->
-    <section id="about" class="container">
-        <h2>About Me</h2>
-        <div class="profile">
-            <!-- Profile Image -->
-            <img src="Shammah.jpg" alt="Profile Picture">
-            <p>
-                <!-- Brief Introduction -->
-                I am a student member of the Nigerian Computer Society (NCS), 
-                an enthusiastic and results-driven computer scientist, educationist, and entrepreneur. 
-                I am passionate about leveraging technology and innovation to drive impactful solutions 
-                in education, technology, and service delivery. Dedicated to continuous learning, 
-                resilience under pressure, and fostering organizational excellence.
-            </p>
-        </div>
-    </section>
-
-    <!-- Hobbies Section -->
-    <section id="hobbies" class="container">
-        <h2>My Hobbies</h2>
-        <ul class="hobby-list">
-            <!-- List of hobbies with icons for better visual representation -->
-            <li>🔍 Solving Problems</li>
-            <li>🎤 Singing</li>
-            <li>🏐 Playing Volleyball</li>
-        </ul>
-    </section>
-
-    <!-- Footer Section: Displays the user's contact information -->
-    <footer id="contact">
-        <div class="container">
-            <h2>Contact Me</h2>
-            <address>
-                <!-- Email link -->
-                📧 Email: <a href="mailto:example@email.com">example@email.com</a><br>
-                <!-- Facebook link, opens in a new tab -->
-                🔗 Facebook: <a href="https://facebook.com/examplehandle" target="_blank">@examplehandle</a>
-            </address>
-        </div>
-    </footer>
+   <!---headr section-->
+   <header>
+    <h1>My Profile</h1>
+  </header>
+  
+<!--navigation section-->
+  <nav>
+    <ul>
+      <li>About Me</li>
+      <li>Hobbies</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
+  
+  <!--Bio Section-->
+  <section>
+    <h2>My Personal Bio</h2>
+    I'm a curious individual who's passionate about learning new things. I've been fortunate enough to be selected for the 3MTT program, which has taught me the importance of advancing my knowledge in ICT. I'm excited to continue learning and growing, and I'm looking forward to help others with the knowledge I am acquiring. I'm grateful for the support of my family, friends and the federal government of Nigeria for the opportunity granted me.
+    <figure>
+      <img src="Shammah.jpg" alt="My Passport">
+      <figcaption>My Passport</figcaption>
+    </figure>
+    
+  </section>
+  
+  <!--List of Hobbies or interest-->
+  <h2>My Hobbies and Interest</h2>
+  <ul>
+    <li>Research</li>
+    <li>Teaching</li>
+    <li>Travelling</li>
+  </ul>
+ 
+  <!--Footer section-->
+  <footer>
+    <h2>Contact Me</h2>
+    <ul>
+      <li><a href="mailto:godwinoegbe@gmail.com">Email</a></li>
+      <li><a href="www.linkedin.com/in/godwin-oche-79994333a/">LinkedIn</a></li>
+    </ul>
+  </footer>
 </body>
 </html>
